--- a/Auswertung_Hammerprojekt_Zielscheibenvariation.ipynb
+++ b/Auswertung_Hammerprojekt_Zielscheibenvariation.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "7SyNEu8JVAKp"
       },
@@ -3344,9 +3344,9 @@
         }
       ],
       "source": [
-        "from google.colab import files\n",
-        "df_final.to_csv('zv_final_data.csv')\n",
-        "files.download('zv_final_data.csv')"
+        "#from google.colab import files\n",
+        "#df_final.to_csv('zv_final_data.csv')\n",
+        "#files.download('zv_final_data.csv')"
       ]
     },
     {
@@ -3378,7 +3378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3452,7 +3452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3527,7 +3527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3822,7 +3822,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4079,7 +4079,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4469,7 +4469,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5zqNOxX8xbwe1vbqyEvlD"
+      "authorship_tag": "ABX9TyPnxo1acHnxIn5TvbPkc076"
     },
     "kernelspec": {
       "display_name": "Python 3",
