--- a/Auswertung_Hammerprojekt_Hammervariation.ipynb
+++ b/Auswertung_Hammerprojekt_Hammervariation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMUWG1f4PBlJ7Rt3/Cg6Znd"
+      "authorship_tag": "ABX9TyMsvwbSZgDxUePdLUjpFIzv"
     },
     "kernelspec": {
       "name": "python3",
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "HsWq8TYId0Ss",
         "colab": {
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "7SyNEu8JVAKp"
       },
@@ -3194,9 +3194,9 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import files\n",
-        "df_final.to_csv('hv_final_data.csv')\n",
-        "files.download('hv_final_data.csv')"
+        "#from google.colab import files\n",
+        "#df_final.to_csv('hv_final_data.csv')\n",
+        "#files.download('hv_final_data.csv')"
       ],
       "metadata": {
         "colab": {
@@ -3325,7 +3325,7 @@
         },
         "outputId": "75b73b1b-03de-467b-cbb5-9dd62e15abe0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3390,7 +3390,7 @@
         "id": "fZN2ATBPULPH",
         "outputId": "e076764c-4892-42d3-f08c-46f3a822119a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3520,7 +3520,7 @@
         "id": "BGe2REaEFl1A",
         "outputId": "d32cf34e-18a4-4140-95af-928d08b8755c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3746,7 +3746,7 @@
         "id": "SgVzjMIxa8V1",
         "outputId": "ce140394-dd99-4131-8936-0eaa14353131"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4018,7 +4018,7 @@
         },
         "outputId": "9e25d9fc-b75c-4609-cea4-0102e40087c4"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
